# fromsoftware-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  publish.sh
crates/darksouls3/: Cargo.toml  mapper-profile.toml
crates/darksouls3/src/: app_menu.rs  cs.rs  cxx_stl.rs  dlkr.rs  dltx.rs  dlui.rs  dlut.rs  fd4.rs  lib.rs  param.rs  rva.rs  sprj.rs  stl.rs  util.rs
crates/darksouls3/src/app_menu/: gaitem_select_menu.rs  new_menu_system.rs
crates/darksouls3/src/cs/: dlc.rs
crates/darksouls3/src/dlio/: common.rs  stream.rs
crates/darksouls3/src/dlkr/: allocator.rs  mutex.rs
crates/darksouls3/src/dlui/: bitset.rs  device.rs  extension.rs  manager.rs
crates/darksouls3/src/fd4/: basic_hash_string.rs
crates/darksouls3/src/param/: generated.rs
crates/darksouls3/src/rva/: bundle.rs  rva_data.rs
crates/darksouls3/src/sprj/: chr_ins.rs  chr_module.rs  event_flag.rs  field_area.rs  field_ins.rs  game_data_man.rs  item.rs  item_id.rs  menu.rs  menu_man.rs  player_game_data.rs  regulation_manager.rs  scaleform_value.rs  solo_param_repository.rs  task.rs  world_block.rs  world_chr_man.rs  world_info.rs
crates/darksouls3/src/stl/: vec.rs
crates/darksouls3/src/util/: save.rs  system.rs
crates/debug/: Cargo.toml
crates/debug/src/: clipboard.rs  display.rs  ext.rs  lib.rs  state_map.rs
crates/eldenring/: Cargo.toml  mapper-profile.toml
crates/eldenring/src/: cs.rs  dlcr.rs  dlio.rs  dlkr.rs  dlrf.rs  dltx.rs  dluid.rs  dlut.rs  ez_state.rs  fd4.rs  gxffx.rs  lib.rs  param.rs  position.rs  rotation.rs  rva.rs  stl.rs  util.rs
crates/eldenring/src/cs/: action_button.rs  ai.rs  auto_invade_point.rs  block_id.rs  bullet_ins.rs  bullet_manager.rs  camera.rs  character_type_properties.rs  chr_ins.rs  chr_manipulator.rs  chr_slot.rs  cs_rand.rs  event_flag.rs  event_man.rs  event_region_man.rs  ez_state.rs  ez_state_talk.rs  fade.rs  fe_man.rs  field_area.rs  field_ins.rs  file.rs  flipper.rs  gaitem.rs  game_data_man.rs  game_man.rs  goal.rs  havok_man.rs  item.rs  item_id.rs  item_lot.rs  job.rs  key_assign.rs  lua_event_man.rs  map_id.rs  menu_man.rs  menu_type.rs  mouse_man.rs  msb.rs  multiplay_type.rs  (+26 more)
crates/eldenring/src/dlio/: common.rs  file_device.rs  stream.rs
crates/eldenring/src/dlkr/: allocator.rs  mutex.rs
crates/eldenring/src/dluid/: input_devices.rs  user_input_device.rs  user_input_direct_converter.rs  virtual_input_data.rs
crates/eldenring/src/dlut/: date_time.rs  fixed_vector.rs  reference_pointer.rs
crates/eldenring/src/ez_state/: environment_query.rs  event.rs  shared_string.rs  value.rs
crates/eldenring/src/fd4/: base_key_assign.rs  base_pad.rs  basic_hash_string.rs  pad_manager.rs  param_repository.rs  resource.rs  slot.rs  step.rs  stepper.rs  task.rs
crates/eldenring/src/param/: generated.rs
crates/eldenring/src/rva/: bundle.rs  rva_jp.rs  rva_ww.rs
crates/eldenring/src/util/: input.rs  system.rs
crates/nightreign/: Cargo.toml  mapper-profile.toml
crates/nightreign/src/: cs.rs  dlut.rs  fd4.rs  lib.rs  param.rs  position.rs  rva.rs
crates/nightreign/src/cs/: block_id.rs  camera.rs  chr_ins.rs  field_area.rs  flipper.rs  game_rend.rs  move_map_step.rs  task.rs  window.rs  world_area_time.rs  world_chr_man.rs  world_info.rs
crates/nightreign/src/dlkr/: mutex.rs  runnable.rs
crates/nightreign/src/fd4/: basic_hash_string.rs  resource.rs  step.rs  task.rs
crates/nightreign/src/rva/: bundle.rs  rva_data.rs  rva_ww.rs
crates/sekiro/: Cargo.toml  mapper-profile.toml
crates/sekiro/src/: app_menu.rs  dlio.rs  dltx.rs  lib.rs  param.rs  rva.rs  sprj.rs  stl.rs  util.rs
crates/sekiro/src/app_menu/: new_menu_system.rs
crates/sekiro/src/dlio/: common.rs  stream.rs
crates/sekiro/src/dlkr/: allocator.rs
crates/sekiro/src/fd4/: basic_hash_string.rs  param_repository.rs  resource.rs  time.rs
crates/sekiro/src/param/: generated.rs
crates/sekiro/src/rva/: bundle.rs  rva_data.rs
crates/sekiro/src/sprj/: event_flag.rs  field_area.rs  game_data_man.rs  item.rs  item_id.rs  menu_man.rs  player_game_data.rs  scaleform_value.rs  solo_param_repository.rs  task.rs  window.rs  world_info.rs
crates/shared/: Cargo.toml
crates/shared/macros/: Cargo.toml
crates/shared/macros/src/: for_all_subclasses.rs  lib.rs  multi_param.rs  researching.rs  singleton.rs  stepper.rs  subclass.rs  superclass.rs  utils.rs
crates/shared/src/: arxan.rs  dl_math.rs  empty.rs  game_allocator.rs  lib.rs  matrix.rs  owned_pointer.rs  program.rs  read_only_pointer.rs  researching.rs  rtti.rs  singleton.rs  static.rs  steam.rs  stepper.rs  subclass.rs  sync.rs  task.rs  unknown_pointer.rs  util.rs
crates/shared/src/dl_math/: linear.rs  matrix.rs  special.rs  vector.rs
crates/shared/src/ext/: read.rs  write.rs
crates/shared/src/util/: incomplete_array_field.rs  unknown_struct.rs
crates/shared/stl/: Cargo.toml
crates/shared/stl/src/: allocator.rs  lib.rs  linked_list.rs  pair.rs  rb_tree.rs  string.rs  vector.rs  vector_bool.rs
crates/shared/stl/tests/: common.rs  linked_list.rs  rb_tree.rs  string.rs  vector.rs  vector_bool.rs
examples/eldenring/farming-sim/: Cargo.toml
examples/eldenring/farming-sim/src/: lib.rs
examples/nr-wallclimb/: Cargo.toml
examples/nr-wallclimb/src/: lib.rs
tests/: Cargo.toml  rva_test.rs
tools/binary-mapper/: Cargo.toml  README.md
tools/binary-mapper/src/: main.rs  rtti.rs
tools/debug-darksouls3/: Cargo.toml
tools/debug-darksouls3/src/: display.rs  lib.rs
tools/debug-darksouls3/src/display/: chr.rs  event_flag.rs  field_area.rs  menu.rs  param.rs  world_block.rs  world_chr_man.rs
tools/debug-eldenring/: Cargo.toml
tools/debug-eldenring/src/: display.rs  lib.rs
tools/debug-eldenring/src/display/: area_time.rs  auto_invade_point.rs  bullet_manager.rs  camera.rs  chr.rs  dlio.rs  event_flag.rs  event_man.rs  fade.rs  fe_man.rs  field_area.rs  gaitem.rs  game_data_man.rs  game_man.rs  geometry.rs  gparam.rs  lua_event_man.rs  modules.rs  mouse_manager.rs  (+8 more)
tools/debug-er/: Cargo.toml
tools/debug-er/src/: display.rs
tools/debug-sekiro/: Cargo.toml
tools/debug-sekiro/src/: display.rs  lib.rs
(+166 files in other folders)
