[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/darksouls3",
    "crates/eldenring",
    "crates/nightreign",
    "tools/debug",
    "tools/binary-mapper",
    "tools/param-generator",
    "examples/apply-speffect",
    "examples/debug-line",
    "examples/invoke-esd",
    "examples/spawn-asset",
    "examples/present-action-button",
    "examples/nightreign/fall-damage",
]

[workspace.package]
version = "0.12.0"
edition = "2024"
repository = "https://github.com/vswarte/eldenring-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
fromsoftware-shared = { path = "crates/shared", version = "0.12.0", package = "fromsoftware-shared" }
fromsoftware-shared-macros = { path = "crates/shared/macros", version = "0.12.0", package = "fromsoftware-shared-macros" }
eldenring = { path = "crates/eldenring", version = "0.12.0", package = "eldenring" }
darksouls3 = { path = "crates/darksouls3", version = "0.12.0", package = "darksouls3" }
nightreign = { path = "crates/nightreign", version = "0.12.0", package = "nightreign" }
binary_mapper = { path = "crates/binary-mapper" }
thiserror = "1"
tracing = "0.1"
glam = ">= 0.30"
byteorder = "1"
pelite = "0.10"
vtable-rs = "0.1.4"
bitfield = "0.19.2"
encoding_rs = "0.8.35"
cxx-stl = "3.4"

[workspace.dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
	"Win32_System_Kernel",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_LibraryLoader",
    "Win32_System_Memory",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
