[package]
name = "darksouls3"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Raw structures and bindings for From Software's title Dark Souls III"

[dependencies]
bitfield.workspace = true
encoding_rs.workspace = true
nalgebra-glm.workspace = true
nalgebra.workspace = true
pelite.workspace = true
fromsoftware-shared.workspace = true
thiserror.workspace = true
tracing.workspace = true
vtable-rs.workspace = true
windows.workspace = true
cxx-stl = "3.4"

[build-dependencies]
serde_derive = "1"
regex = "1"

[build-dependencies.serde]
version = "1"
features = ["derive"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
