[package]
name = "eldenring"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Structures, bindings, and utilities for From Software's title Elden Ring"

[lints.rust]
unused = "allow"

[dependencies]
fromsoftware-shared.workspace = true
tracing.workspace = true
thiserror.workspace = true
nalgebra-glm.workspace = true
nalgebra.workspace = true
pelite.workspace = true
vtable-rs.workspace = true
windows.workspace = true
bitfield.workspace = true
encoding_rs.workspace = true
cxx-stl = "3.4"
steamworks = "0.10"
steamworks-sys = "0.10"
undname = "2"

[build-dependencies]
serde_derive = "1"
regex = "1"

[build-dependencies.serde]
version = "1"
features = ["derive"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
