[package]
name = "fromsoftware-shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Helpers for dealing with pointers and other common stuff across games"

[dependencies]
windows.workspace = true
from-singleton.workspace = true
nalgebra-glm.workspace = true
nalgebra.workspace = true
pelite.workspace = true
fromsoftware-shared-macros.workspace = true
vtable-rs.workspace = true
undname = "2"
