[package]
name = "fromsoftware-shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Helpers for dealing with pointers and other common stuff across games"

[dependencies]
windows.workspace = true
glam.workspace = true
pelite.workspace = true
fromsoftware-shared-macros.workspace = true
thiserror.workspace = true
vtable-rs.workspace = true
undname = "2"
from-singleton = "3"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
