[package]
name = "nr-wallclimb"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
eldenring.workspace = true
eldenring-util.workspace = true
pelite.workspace = true
from-singleton.workspace = true

once_cell = "1.21.3"
ron = "0.11.0"
serde = "1.0.228"

[dependencies.hudhook]
git = "https://github.com/veeenu/hudhook"
features = [
    "imgui-tables-api"
]

[lib]
crate-type = ["cdylib"]