[package]
readme = "README.md"
name = "binary-mapper"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
pelite.workspace = true
fromsoftware-shared.workspace = true
toml.workspace = true
serde.workspace = true
clap = { version = "4.5.4", features = ["derive", "env"] }
memmap = "0.7"
rayon = "1"
