[package]
name = "debug-eldenring"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
debug.workspace = true
fromsoftware-shared.workspace = true
eldenring.workspace = true
windows.workspace = true
pelite.workspace = true
tracing.workspace = true
libhotpatch.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true

[dependencies.hudhook]
git = "https://github.com/veeenu/hudhook"
features = [
    "imgui-tables-api"
]

[lib]
crate-type = ["cdylib"]
