[package]
name = "debug-er"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
fromsoftware-shared.workspace = true
eldenring.workspace = true
windows.workspace = true
pelite.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
tracing-panic = "0.1"
libhotpatch = "1.1.0"

[dependencies.hudhook]
git = "https://github.com/veeenu/hudhook"
features = [
    "imgui-tables-api"
]

[lib]
crate-type = ["cdylib"]
