[package]
name = "fromsoftware-shared-macros"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Macro helpers for dealing with pointers and other common stuff across From Software games. Depend on fromsoftware-shared instead."

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version= "2", features = ["full"] }
