[package]
name = "farming-sim"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
eldenring.workspace = true
eldenring-util.workspace = true
shared.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
pelite = "0.10"
nalgebra-glm.workspace = true

[lib]
crate-type = ["cdylib"]
